...
    case freeForAll
    case pairs

    var title: String {
        switch self {
        case .freeForAll:
            return "Каждый сам за себя"
        case .pairs:
            return "Пара на пару"
        }
    }

    var shortTitle: String {
...
